--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-
+    <string name="backButton">Back</string>
+    <string name="List_of_Users_text">List Of Registered Users</string>
     <!-- settings -->
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
