--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Game Finder</string>
     <string name="home">Home</string>
-    <string name="favorites">Favorites</string>
     <string name="search">Search</string>
     <string name="trending">Trending</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="game_specific_artwork">Game Specific Artwork</string>
+    <string name="favorites">Favorites</string>
+    <string name="example_game">Example Game</string>
+    <string name="game_description_here" />
 </resources>
